# Cleaver2Library

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UseCleaver2.cmake
CMake/: Cleaver2Config.cmake.in
src/: CMakeLists.txt
src/lib/cleaver/: AbstractField.h  AbstractScalarField.h  AbstractVolume.h  BoundingBox.cpp  Cleaver.cpp  Cleaver.h  CleaverMesher.cpp  CleaverMesher.h  CleaverMesherImpl.h  ConstantField.cpp  Debug.h  InverseField.h  LinearViolationChecker.h  Matrix3x3.cpp  Plane.cpp  ScalarField.cpp  SimpleInterfaceCalculator.cpp  SimpleInterfaceCalculator.h  SizingFieldCreator.h  SizingFieldOracle.h  Tet.cpp  TetMesh.cpp  Timer.cpp  Timer.h  TopologicalInterfaceCalculator.h  Util.cpp  Vertex.cpp  Vertex.h  vec3.cpp  vec3.h
src/lib/cleaver2/: BoundingBox.h  CMakeLists.txt  CleaverMesher.cpp  ConstantField.h  Debug.cpp  Debug.h  Face.cpp  Face.h  HalfEdge.h  HalfFace.h  InterfaceCalculator.h  InverseField.cpp  LinearInterfaceCalculator.cpp  LinearInterfaceCalculator.h  LinearViolationChecker.cpp  Matrix3x3.h  Octree.cpp  Octree.h  OctreeMesher.cpp  OctreeMesher.h  Plane.h  ScalarField.h  ScaledField.cpp  ScaledField.h  SizingFieldCreator.cpp  SizingFieldOracle.cpp  Status.h  Tet.h  TetMesh.cpp  TetMesh.h  Timer.cpp  TopologicalInterfaceCalculator.cpp  Util.cpp  Util.h  ViolationChecker.h  Volume.cpp  Volume.h
