cmake_minimum_required(VERSION 2.6)

add_subdirectory(src)

#SET(SCI_QWT_INCLUDE "${CMAKE_SOURCE_DIR}/src")
#SET(SCI_QWT_LIBRARY qwt CACHE INTERNAL "Qwt library" FORCE)

#set(SCI_QWT_LIBRARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/src)
#set(QWT_USE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/UseQwt.cmake")

#CONFIGURE_FILE("${CMAKE_SOURCE_DIR}/CMake/QwtConfig.cmake.in"
#  "${CMAKE_BINARY_DIR}/QwtConfig.cmake" @ONLY IMMEDIATE)
#EXPORT(TARGETS ${SCI_QWT_LIBRARY} FILE QwtExports.cmake)
